k8s/pod-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "test-app"

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fastapi-app-deployment-taget1
  namespace: "test-app"
  labels:
    app: fastapi-app-taget1
spec:
  replicas: 1
  selector:
    matchLabels:
     app: fastapi-app-taget1
  template:
    metadata:
      labels:
        app: fastapi-app-taget1
    spec:
      containers:
      - image: 905860205176.dkr.ecr.ap-northeast-1.amazonaws.com/flasksample:tokyo
        name: app
        resources:
         requests:
           cpu: 250m
           memory: 500Mi
        ports:
          - containerPort: 8000
      serviceAccountName: akane-dev-irsa-service-account
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-app
  name: service-fastapi
spec:
  ports:
    - port: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: fastapi-app-taget1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test-app
  name: ingress-fastapi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=weighted_random,load_balancing.algorithm.anomaly_mitigation=on
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service: 
                name: service-fastapi
                port: 
                  number: 8000
